--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.6",
     "framer-motion": "^11.3.28",
     "next": "14.2.5",
     "react": "^18",
